RESOLVED FIXED124418
Hovering over text using simple line path should not cause switch to line boxes
https://bugs.webkit.org/show_bug.cgi?id=124418
Summary Hovering over text using simple line path should not cause switch to line boxes
Antti Koivisto
Reported 2013-11-15 09:36:53 PST
it currently does
Attachments
patch (7.88 KB, patch)
2013-11-15 09:42 PST, Antti Koivisto
andersca: review+
Antti Koivisto
Comment 1 2013-11-15 09:42:49 PST
Antti Koivisto
Comment 2 2013-11-15 10:30:57 PST
Note You need to log in before you can comment on or make changes to this bug.