Source/WebCore/rendering/SimpleLineLayoutFunctions.h
@@ -56,6 +56,9 @@ unsigned findTextCaretMinimumOffset(const RenderText&, const Layout&);
 unsigned findTextCaretMaximumOffset(const RenderText&, const Layout&);
 IntRect computeTextBoundingBox(const RenderText&, const Layout&);
 
+Vector<IntRect> collectTextAbsoluteRects(const RenderText&, const Layout&, const LayoutPoint& accumulatedOffset);
+Vector<FloatQuad> collectTextAbsoluteQuads(const RenderText&, const Layout&, bool* wasFixed);
+
 LayoutUnit lineHeightFromFlow(const RenderBlockFlow&);
 LayoutUnit baselineFromFlow(const RenderBlockFlow&);
 
